   supporting the new API from theora-exp.
 - Change granule_frame() to return an index as documented.
   This is a change of behaviour from 1.0beta1.
 - Document that granule_time() returns the end of the 
   presentation interval. 
 - Fix a problem with decoder quantizer initialization
 - Fix a page queue problem with png2theora.
 - Dropped build support for Microsoft VS2003.
 - Added the specification to the autotools build.
 - Specification corrections.

libtheora 1.0beta2 (2007 October 12)

 - Fix a crash bug on char-is-unsigned architectures (PowerPC)
 - Fix a buffer sizing issue that caused rare encoder crashes
 - Fix a buffer alignment issue
 - Build fixes for MingW32, MSVC
 - Improved format documentation.

libtheora 1.0beta1 (2007 September 22)

 - Granulepos scheme modified to match other codecs. This bumps
   the bitstream revision to 3.2.1. Bitstreams marked 3.2.0 are
   handled correctly by this decoder. Older decoders will show
   a one frame sync error in the less noticable direction.

libtheora 1.0alpha8 (2007 September 18)

 - Switch to new spec compliant decoder from theora-exp branch.
   Written by Dr. Timothy Terriberry.
 - Add support to the encoder for using quantization settings
   provided by the application.
 - more assembly optimizations

libtheora 1.0alpha7 (2006 June 20)

 - Enable mmx assembly by default
 - Avoid some relocations that caused problems on SELinux
 - Other build fixes
 - time testing mode (-f) for the dump_video example

libtheora 1.0alpha6 (2006 May 30)

 * Merge theora-mmx simd acceleration (x86_32 and x86_64)
 * Major RTP payload specification update
 * Minor format specification updates
 * Fix some spurious calls to free() instead of _ogg_free()
 * Fix invalid array indexing in PixelLineSearch()
 * Improve robustness against invalid input
 * General warning cleanup
 * The offset_y member now means what every application thought it meant
   (offset from the top). This will mean some old files (those with a 