@@ -432,11 +432,8 @@ static void UpdateFrame(CP_INSTANCE *cpi){
   cpi->pb.InvLastInterDC = 0;
 
   /* Initialise bit packing mechanism. */
-#ifndef LIBOGG2
   oggpackB_reset(cpi->oggbuffer);
-#else
-  oggpackB_writeinit(cpi->oggbuffer, cpi->oggbufferstate);
-#endif
+
   /* mark as video frame */
   oggpackB_write(cpi->oggbuffer,0,1);
 
@@ -981,14 +978,8 @@ int theora_encode_init(theora_state *th, theora_info *c){
     cpi->QTargetModifier[i] = 1.0;
 
   /* Set up an encode buffer */
-#ifndef LIBOGG2
   cpi->oggbuffer = _ogg_malloc(sizeof(oggpack_buffer));
   oggpackB_writeinit(cpi->oggbuffer);
-#else
-  cpi->oggbuffer = _ogg_malloc(oggpack_buffersize());
-  cpi->oggbufferstate = ogg_buffer_create();
-  oggpackB_writeinit(cpi->oggbuffer, cpi->oggbufferstate);
-#endif 
 
   /* Set data rate related variables. */
   cpi->Configuration.TargetBandwidth = (c->target_bitrate) / 8;
@@ -1155,11 +1146,7 @@ int theora_encode_packetout( theora_state *t, int last_p, ogg_packet *op){
   if(!cpi->packetflag)return(0);
   if(cpi->doneflag>0)return(-1);
 
-#ifndef LIBOGG2
   op->packet=oggpackB_get_buffer(cpi->oggbuffer);
-#else
-  op->packet=oggpackB_writebuffer(cpi->oggbuffer);
-#endif
   op->bytes=bytes;
   op->b_o_s=0;
   op->e_o_s=last_p;
@@ -1194,11 +1181,7 @@ int theora_encode_header(theora_state *t, ogg_packet *op){
   CP_INSTANCE *cpi=(CP_INSTANCE *)(t->internal_encode);
   int offset_y;
 
-#ifndef LIBOGG2
   oggpackB_reset(cpi->oggbuffer);
-#else
-  oggpackB_writeinit(cpi->oggbuffer, cpi->oggbufferstate);
-#endif
   oggpackB_write(cpi->oggbuffer,0x80,8);
   _tp_writebuffer(cpi->oggbuffer, "theora", 6);
 
@@ -1233,11 +1216,7 @@ int theora_encode_header(theora_state *t, ogg_packet *op){
 
   oggpackB_write(cpi->oggbuffer,0,3); /* spare config bits */
 
-#ifndef LIBOGG2
   op->packet=oggpackB_get_buffer(cpi->oggbuffer);
-#else
-  op->packet=oggpackB_writebuffer(cpi->oggbuffer);
-#endif
   op->bytes=oggpackB_bytes(cpi->oggbuffer);
 
   op->b_o_s=1;
@@ -1258,13 +1237,8 @@ int theora_encode_comment(theora_comment *tc, ogg_packet *op)
   const int vendor_length = strlen(vendor);
   oggpack_buffer *opb;
 
-#ifndef LIBOGG2
   opb = _ogg_malloc(sizeof(oggpack_buffer));
   oggpackB_writeinit(opb);
-#else
-  opb = _ogg_malloc(oggpack_buffersize());
-  oggpackB_writeinit(opb, ogg_buffer_create());
-#endif 
   oggpackB_write(opb, 0x81, 8);
   _tp_writebuffer(opb, "theora", 6);
 
@@ -1285,16 +1259,10 @@ int theora_encode_comment(theora_comment *tc, ogg_packet *op)
   }
   op->bytes=oggpack_bytes(opb);
 
-#ifndef LIBOGG2
   /* So we're expecting the application will free this? */
   op->packet=_ogg_malloc(oggpack_bytes(opb));
   memcpy(op->packet, oggpack_get_buffer(opb), oggpack_bytes(opb));
   oggpack_writeclear(opb);
-#else
-  op->packet = oggpack_writebuffer(opb);
-  /* When the application puts op->packet into a stream_state object,
-     it becomes the property of libogg2's internal memory management. */
-#endif
 
   _ogg_free(opb);
 
@@ -1312,22 +1280,14 @@ int theora_encode_comment(theora_comment *tc, ogg_packet *op)
 int theora_encode_tables(theora_state *t, ogg_packet *op){
   CP_INSTANCE *cpi=(CP_INSTANCE *)(t->internal_encode);
 
-#ifndef LIBOGG2
   oggpackB_reset(cpi->oggbuffer);
-#else
-  oggpackB_writeinit(cpi->oggbuffer, cpi->oggbufferstate);
-#endif
   oggpackB_write(cpi->oggbuffer,0x82,8);
   _tp_writebuffer(cpi->oggbuffer,"theora",6);
 
   WriteQTables(&cpi->pb,cpi->oggbuffer);
   WriteHuffmanTrees(cpi->pb.HuffRoot_VP3x,cpi->oggbuffer);
 
-#ifndef LIBOGG2
   op->packet=oggpackB_get_buffer(cpi->oggbuffer);
-#else
-  op->packet=oggpackB_writebuffer(cpi->oggbuffer);
-#endif
   op->bytes=oggpackB_bytes(cpi->oggbuffer);
 
   op->b_o_s=0;
